<resources>
    <string name="app_name">JackPot</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="login_to_pixelprize">Login to JackPot</string>
    <string name="verifying_user">Verifying User in 10…</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="games">Game</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="games_fragment">Games Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="wallet_fragment">Wallet Fragment</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="your_balance">Your Balance</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="add_money">Add Money</string>
    <string name="my_wallet">My Wallet</string>
    <string name="enter_amount_to_withdraw">Enter Amount to Withdraw</string>
    <string name="withdraw">Withdraw</string>
    <string name="leaderboard">🏆 Leaderboard</string>
    <string name="wallet_0">Wallet: ₹0</string>
    <string name="user_example_com">user@example.com</string>
    <string name="user_name">User Name</string>
    <string name="logout">Logout</string>
    <string name="kyc">KYC</string>
    <string name="update_profile">Update Profile</string>
    <string name="_9999999999">9999999999</string>
    <string name="apoorv_rathore">Apoorv Rathore</string>
    <string name="game_title">Game Title</string>
    <string name="game_description_goes_here">Game description goes here...</string>
    <string name="spin_game">🎰 Spin Game</string>
    <string name="spin">Spin</string>
    <string name="spin_to_win">🎰 Spin to Win!</string>
    <string name="spin_and_win">🎮 Spin and Win</string>
    <string name="setting">Setting</string>
    <string name="spin_the_wheel_to_win">Spin the wheel to win!</string>
    <string name="_0_000">₹ 0.000</string>
    <string name="balance">Balance</string>
    <string name="lv_0">LV 0</string>
    <string name="max">MAX</string>
    <string name="_10x">10X</string>
    <string name="_5x">5x</string>
    <string name="_2x">2x</string>
    <string name="x100">x100</string>
    <string name="x50">x50</string>
    <string name="x25">x25</string>
    <string name="x20">x20</string>
    <string name="x10">x10</string>
    <string name="win">WIN</string>
    <string name="full_screen_image">Full screen image</string>
    <string name="play">Play</string>
    <string name="select_bet_amount">Select Bet Amount</string>
    <string name="_10">₹10</string>
    <string name="_50">₹50</string>
    <string name="_100">₹100</string>
    <string name="_500">₹500</string>
    <string name="_200">₹200</string>
    <string name="_1000">₹1000</string>
    <string name="cancel">cancel</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="_3">₹ 3</string>
    <string name="bet">Bet</string>
    <string name="confirm">confirm</string>
    <string name="enter_custom_amount">Enter Your Amount</string>
    <string name="or">Or</string>
    <string name="plus">+</string>
    <string name="insufficient_balance">Insufficient Balance!</string>
    <string name="ok">OK</string>
    <string name="warning">Warning</string>
</resources>