<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/popup_bg"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/select_bet_amount"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bet_1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/bet_button_bg"
                android:text="@string/_100"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bet_2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/bet_button_bg"
                android:text="@string/_200"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bet_3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/bet_button_bg"
                android:text="@string/_500"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bet_4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/bet_button_bg"
                android:text="@string/_1000"
                android:textColor="@color/white"
                android:textSize="16sp" />



        </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <!-- Custom Bet Input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/custom_bet_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:autofillHints="money"
            android:background="@drawable/background_input"
            android:hint="@string/enter_custom_amount"
            android:inputType="number"
            android:textSize="12sp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_600"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/custom_bet_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bet_button_bg"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_cancel_bg"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>
