<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletActivity"
    android:padding="@dimen/_15sdp">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingBottom="@dimen/_35sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginBottom="@dimen/_22sdp"
        android:backgroundTint="#001743"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtBalanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_balance"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"/>
            <TextView
                android:id="@+id/txtBalanceAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₹ 0"
                android:textSize="@dimen/_30ssp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_8sdp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btnAddMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_money"
        android:textColor="@color/black"
        android:backgroundTint="@color/design_default_color_primary"
        android:layout_marginBottom="@dimen/_15sdp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnWithdrawMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/withdraw_money"
        android:textColor="@color/black"
        android:backgroundTint="@color/accent_green"
        android:textStyle="bold"/>

</LinearLayout>
</ScrollView>