<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slot_machine_background">

    <LinearLayout
        android:id="@+id/headerBanner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_banner_bg"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imgHeader"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/header" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/payTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerBanner"
        android:layout_marginTop="10dp"
        android:background="@drawable/paytable_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_slot1"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_slot1" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_slot1"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/x100Multiplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/bebas_neue"
                    android:text="@string/x100"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_slot4" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="4dp"
                        android:src="@drawable/ic_slot4" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="4dp"
                        android:src="@drawable/ic_slot4" />

                    <TextView
                        android:id="@+id/x20Multiplier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/bebas_neue"
                        android:gravity="center_vertical"
                        android:text="@string/x20"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_slot2"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_slot2"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_slot2" />

                <TextView
                    android:id="@+id/x50Multiplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/bebas_neue"
                    android:text="@string/x50"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_slot5" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="4dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_slot5" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="4dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_slot5" />

                    <TextView
                        android:id="@+id/x10Multiplier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/bebas_neue"
                        android:gravity="center_vertical"
                        android:text="@string/x10"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_slot3" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_slot3" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_slot3" />

                <TextView
                    android:id="@+id/x25Multiplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/bebas_neue"
                    android:text="@string/x25"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/slotReelsContainer"
        android:layout_width="500dp"
        android:layout_height="178dp"
        android:layout_below="@id/payTableLayout"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/slot_reels_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="11dp">

        <com.playzelo.jackpot.widget.Wheel3DView
            android:id="@+id/slot1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/cylinder"
            app:itemHeight="90dp"
            app:itemWidth="50dp"
            app:visibleItems="1" />

        <com.playzelo.jackpot.widget.Wheel3DView
            android:id="@+id/slot2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="-10dp"
            android:layout_weight="1"
            android:background="@drawable/cylinder"
            app:itemHeight="90dp"
            app:itemWidth="50dp"
            app:visibleItems="1" />

        <com.playzelo.jackpot.widget.Wheel3DView
            android:id="@+id/slot3"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="-10dp"
            android:layout_weight="1"
            android:background="@drawable/cylinder"
            app:itemHeight="90dp"
            app:itemWidth="50dp"
            app:visibleItems="1" />

        <com.playzelo.jackpot.widget.Wheel3DView
            android:id="@+id/slot4"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="-10dp"
            android:layout_weight="1"
            android:background="@drawable/cylinder"
            app:itemHeight="90dp"
            app:itemWidth="50dp"
            app:visibleItems="1" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgLock"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:src="@drawable/lock_and_chain"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ticketSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/slotReelsContainer"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

<!--        <Button-->
<!--            android:id="@+id/btnBuyTicket"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/spin_button_bg"-->
<!--            android:padding="10dp"-->
<!--            android:text="Buy Ticket"-->
<!--            android:textColor="#FFFFFF"-->
<!--            android:textSize="16sp"-->
<!--            android:textStyle="bold" />-->

    </LinearLayout>


    <LinearLayout
        android:id="@+id/winDisplayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ticketSection"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/win"
            android:textColor="#FFD700"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/winAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="100dp"
            android:text="₹ 0.000"
            android:textColor="#00FF00"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomControlsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/controls_bg"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="Spin to win!"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/bet"
                        android:textColor="#FFD700"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/betAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:text="@string/_3"
                        android:textColor="#00FF00"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/btnAdd"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/settings_button_bg"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_add"
                        android:textColor="@color/white" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/spinButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/spin_button_bg"
                    android:text="@string/spin"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_14ssp"

                    tools:ignore="VisualLintButtonSize" />


            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/level_bg"
                android:fontFamily="@font/bebas_neue"
                android:padding="4dp"
                android:text="LV 0"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="Balance"
                android:textColor="#FFD700"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/balanceAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₹ 0.000"
                android:textColor="#00FF00"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>